--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,19 @@
 [project]
-name = "library"
+name = "Library-API"
 version = "0.1.0"
-description = "Add your description here"
+description = "Library API based on FastAPI. For Razdorov"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "fastapi>=0.124.2",
+    "greenlet>=3.3.0",
+    "pydantic>=2.12.5",
+    "pydantic-settings>=2.12.0",
+    "sqlalchemy>=2.0.45",
+    "uvicorn>=0.38.0",
+]
+
+[dependency-groups]
+dev = [
+    "httpx>=0.28.1",
+    "pytest>=9.0.2",
+]
