--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 description = "Library API based on FastAPI. For Razdorov"
 requires-python = ">=3.12"
 dependencies = [
+    "alembic>=1.17.2",
+    "asyncpg>=0.31.0",
     "fastapi>=0.124.2",
     "greenlet>=3.3.0",
     "pydantic>=2.12.5",
