--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,13 @@ requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.17.2",
     "asyncpg>=0.31.0",
+    "bcrypt==4.3.0",
     "fastapi>=0.124.2",
     "greenlet>=3.3.0",
+    "passlib[bcrypt]>=1.7.4",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
+    "python-jose[cryptography]>=3.5.0",
     "sqlalchemy>=2.0.45",
     "uvicorn>=0.38.0",
 ]
