--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,14 @@ dependencies = [
     "fastapi>=0.124.2",
     "greenlet>=3.3.0",
     "passlib[bcrypt]>=1.7.4",
-    "pydantic>=2.12.5",
+    "pydantic[email]>=2.12.5",
     "pydantic-settings>=2.12.0",
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
     "python-jose[cryptography]>=3.5.0",
     "sqlalchemy>=2.0.45",
     "uvicorn>=0.38.0",
+    "aiosqlite>=0.21.0",
 ]
 
 [dependency-groups]
@@ -22,3 +25,11 @@ dev = [
     "httpx>=0.28.1",
     "pytest>=9.0.2",
 ]
+
+[project.optional-dependencies]
+test = ["pytest", "pytest-asyncio", "httpx"]
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
+testpaths = ["tests"]
+asyncio_mode = "auto"
